Fix lists padding on small screens

--- a/app/styles/_base.styl
+++ b/app/styles/_base.styl
@@ -3,6 +3,7 @@ dl
     margin 1em 0
 
 ul
+    list-style-position inside
     margin 1em 0
     @media(max-width:22.4999em)
         padding 0
